# VS2

./: README.md  tmptoken.txt
src/avoidance/: CMakeLists.txt  package.xml
src/avoidance/include/avoidance/: common.h  math_utils.h
src/avoidance/launch/: avoidance.launch  pathsave.launch
src/avoidance/msg/: VehicleStatus.msg
src/avoidance/rviz_cfg/: avoidance.rviz
src/avoidance/src/: extractObstacle.cpp  extractObstacle2.cpp  extractObstacle_scan.cpp  extractObstacle_scan_plan.cpp  pathSave.cpp
src/custom_messages/: CMakeLists.txt  package.xml
src/custom_messages/msg/: VehicleStatus.msg
src/get_gps/: CMakeLists.txt  package.xml
src/get_gps/include/get_gps/: trans_gps.h
src/get_gps/src/: trans_gps.cpp
src/gps2xy/: CMakeLists.txt  package.xml
src/gps2xy/include/gps2xy/: front_gps2xy.h  self_gps2xy.h
src/gps2xy/src/: front_gps2xy.cpp  self_gps2xy.cpp
src/nodefollow/: CMakeLists.txt  package.xml
src/nodefollow/include/avoidance/: common.h
src/nodefollow/include/nodefollow/: myGoal.h  node_pid.h
src/nodefollow/launch/: VS2_follower.launch  VS2_leader.launch  nodefollow.launch
src/nodefollow/src/: myGoal.cpp  node_pid.cpp  pid.cpp  pid2.cpp
